--- a/css/print.css
+++ b/css/print.css
@@ -11,7 +11,7 @@ body{
   font-family: 'Lato', sans-serif;
 }
 
-article{
+section:nth-child(2){
   display: grid;
   grid-template-columns: 1fr 1.5fr;
   column-gap: 10px;
